Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test1.java
/*
Test1
Objetivo: Detectar que despues de extends halla un identificador.

*/

class UnaClase extends 2 {

}